# RLE

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
app/: CMakeLists.txt  main.c
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  graph_legend.html  group___e_x_i_t___c_o_d_e_s.html  group___e_x_i_t___c_o_d_e_s.js  group___r_l_e.html  group___r_l_e.js  index.html  main_8c.html  main_8c.js  main_8c__incl.map  main_8c__incl.md5  modules.html  modules.js  navtreedata.js  navtreeindex0.js  rle_8c.html  rle_8c.js  rle_8c__incl.map  rle_8c__incl.md5  rle_8h.html  rle_8h.js  rle_8h__dep__incl.map  rle_8h__dep__incl.md5  (+11 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: rle.h
src/: CMakeLists.txt  rle.c
tests/: CMakeLists.txt  tests.c  tests.cpp
